=== GDL 0.6.0 ===

2005-06-27  Naba Kumar  <naba@gnome.org>

	* configure.in: Bumpped version to 0.6.0
	* NEWS: Updated.

2005-06-23  Naba Kumar  <naba@gnome.org>

	* gdl/gdl-dock-layout.c: gcc4 compile fixes. Patch from
	David Malcolm  <dmalcolm@redhat.com>.

2005-03-20  Naba Kumar  <naba@gnome.org>

	* Makefile.am, configure.in, gdl/Makefile.am, gdl/gdl.h: Removed
	corba generated codes for symbolbrowser, idl files, configure
	codes for ctags and other deprecated stuffs.
	
	* gdl.spec.in: Fixed RPM package creation.

=== GDL 0.5.0 ===

2005-03-14  Naba Kumar  <naba@gnome.org>

	* configure.in, NEWS: Bumpped version to 0.5.0 and prepared for
	release.

	* gdl/Makefile.am: Added image_DATA in EXTRA_DIST.
	
2005-04-01  Steve Murphy  <murf@e-tools.com>

        * configure.in: Added "rw" to ALL_LINGUAS.

2005-03-08  Naba Kumar  <naba@gnome.org>

	* configure.in, Makefile.am: Disabling symbol-browser build as it
	has been deprecated. Eventually, it will be removed.

	Patch from: Pierre Sarrazin  <sarrazip@sarrazip.com>
	* gdl.spec.in: Updated and fixed rpm spec file.
	
	Patch from: David A Knight  <david@ritter.demon.co.uk>
	* gdl/gdl-dock-item.c: Fixed to enable hide/show of GdlDockItem
	to be detected. Bug #143471.
	
	Patch from: David A Knight  <david@ritter.demon.co.uk>
	* gdl/gdl-dock-item-grip.c, gdl/gdl-dock-item.[ch],
	gdl/gdl-dock-master.c: The attached patch modifies the behaviour
	of GdlDockItem/GdlDockItemGrip so that even when locked the grip
	bar is always displayed. To allow items to not have a grip bar
	at all a new behaviour is also added, GDL_DOCK_ITEM_BEH_NO_GRIP,
	as the locked status can no longer be used for this. Bug #143475
	
	Patch from: David A Knight  <david@ritter.demon.co.uk>
	* gdl/gdl-dock-bar.[ch]: Added orientation get/set functions
	to allow for horizontal/vertical layout -- bug #155339

2004-12-25  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Add «nb» to ALL_LINGUAS.

2004-11-04	Amanpreet Singh Alam <aalam@redhat.com>
	